add 리액트로 사고하기+단축키팁

--- a/_posts/2025-07-18-2025-07-18_학습 노트.md
+++ b/_posts/2025-07-18-2025-07-18_학습 노트.md
@@ -52,3 +52,42 @@ date: 2025-07-18
 
 ## 한 줄 요약
 **SSL은 웹 보안, SSH는 서버 관리**
+
+---
+
+## ⚛️ 리액트로 사고하기
+
+**React 앱을 체계적으로 설계하는 5단계 접근법**
+
+1. **UI 구상한거 컴포넌트 계층으로 쪼개기**
+   - 디자인을 보고 컴포넌트 단위로 분해
+   - 단일 책임 원칙: 하나의 컴포넌트는 하나의 일만
+
+2. **정적인 버전으로 대충 만들기**
+   - State 사용하지 말고 props만으로 구현
+   - 데이터 흐름 확인 (상위 → 하위)
+
+3. **어떤걸 State로 사용할지 생각하기**
+   - 시간이 지나도 변하지 않으면 → State 아님
+   - props로 전달받으면 → State 아님
+   - 다른 state나 props로 계산 가능하면 → State 아님
+
+4. **어디에 State가 있어야하는지 생각하기**
+   - 해당 state를 사용하는 모든 컴포넌트의 공통 부모에 배치
+   - 적절한 부모가 없으면 새로운 컴포넌트 생성
+
+5. **역 데이터 흐름 추가하기**
+   - 하위 컴포넌트에서 상위 컴포넌트의 state 변경 필요시
+   - 상위에서 함수를 만들어 props로 전달
+   - 하위에서 이벤트 발생시 전달받은 함수 호출
+   - 예: `onChange={handleInputChange}` 형태로 콜백 전달
+
+---
+
+## 💡 유용한 팁
+
+**브라우저 단축키**
+- `Ctrl + Shift + T`: 닫힌 탭 다시 열기
+
+**Windows 단축키**
+- `Windows + L`: 화면 잠금
