게시물 주제 수정

--- a/_posts/2025-07-17-2025-07-17_학습 노트.md
+++ b/_posts/2025-07-17-2025-07-17_학습 노트.md
@@ -4,7 +4,7 @@ categories: [학습노트]
 date: 2025-07-17
 ---
 
-# 배운 개념들
+# 📚 도커, 파이썬, 리액트 핵심 요약
 
 ## 🐳 Docker
 **다른 환경으로 프로그램을 쉽게 이식할 수 있게 해주는 컨테이너 기술**
