--- a/_posts/2025-07-18-2025-07-18_학습 노트.md
+++ b/_posts/2025-07-18-2025-07-18_학습 노트.md
@@ -4,7 +4,7 @@ categories: [학습노트]
 date: 2025-07-18
 ---
 
-# 배운 개념들
+# 📚 웹 보안과 React 사고법
 
 ## 🔐 SSL/TLS (Secure Sockets Layer / Transport Layer Security)
 
