--- a/_posts/2025-07-22-2025-07-22_학습 노트.md
+++ b/_posts/2025-07-22-2025-07-22_학습 노트.md
@@ -4,7 +4,7 @@ categories: [학습노트]
 date: 2025-07-22
 ---
 
-# 📚 데이터 분석 & 머신러닝 학습노트 (쉽게 풀어서)
+# 📚 데이터 분석 & 머신러닝
 
 ---
 
@@ -56,42 +56,14 @@ df = pd.read_csv('/content/drive/MyDrive/파일경로/파일명.csv')
 
 ---
 
-## ✅ 차원 축소 (Dimensionality Reduction)
-
-**차원 축소**는 데이터의 복잡한 특징(피처)을 **더 적은 수의 특징으로 줄이되, 중요한 정보는 최대한 보존**하는 기법이에요.
-
-| 방법 | 특징 | 사용 목적 | 중학생도 이해할 수 있는 예시 |
-|------|------|-----------|---------------------------|
-| **PCA** (주성분 분석) | 데이터의 **분산이 큰 방향**을 기준으로 축소 | 시각화, 노이즈 제거, 과적합 방지 | 여러 과목 점수를 '공부 잘하는 정도' 하나로 요약하기 |
-| **LDA** (선형 판별 분석) | **클래스 간 차이를 극대화**하는 방향으로 축소 | 분류 성능 향상, 시각화 | 고양이/강아지 구분에 좋은 기준으로 데이터 줄이기 |
-
----
-
-## ✅ PCA (주성분 분석, Principal Component Analysis)
-
-### 📌 개념  
-- 여러 변수 중 가장 정보가 많은 방향으로 데이터를 표현해서 차원을 줄이는 방법이에요.
-- 정보를 최대한 유지하면서 데이터를 압축해요.
-
-### 📌 왜 쓰는가?
-- 데이터가 너무 많아 계산이 어려울 때
-- 시각화를 위해 2~3차원으로 줄여야 할 때
-- 데이터 노이즈를 줄일 때
-
----
-
-## ✅ LDA (선형 판별 분석)
-- 데이터의 정답(레이블) 정보를 사용해  
-- **클래스 간 차이가 가장 크게 보이도록** 데이터를 줄이는 방법이에요.
-- 주로 분류 문제에서 사용돼요.
-
----
-
 ## ✅ 공분산, 공분산 행렬, 고유벡터, 고유값
-- **공분산** : 두 데이터가 같이 변하는 정도 (같이 크거나 작으면 양수)
-- **공분산 행렬** : 여러 변수 간 공분산을 정리한 표
-- **고유벡터** : 데이터를 가장 잘 설명하는 방향
-- **고유값** : 그 방향이 얼마나 중요한지 나타내는 수치
+
+| 개념 | 뜻 | 예시 |
+|------|----|------|
+| **공분산** | 두 값이 함께 증가하거나 함께 감소하는 정도 | 키가 크면 몸무게도 보통 크지? 이런 식으로 두 값이 같이 커지면 공분산이 **양수** |
+| **공분산 행렬** | 여러 변수의 공분산을 한눈에 볼 수 있게 정리한 표 | 수학, 과학, 국어 점수끼리 서로 얼마나 함께 변하는지 정리한 표 |
+| **고유벡터** | 데이터를 가장 잘 설명하는 방향(기준) | 여러 과목 점수 중 **수학 점수가 성적에 가장 큰 영향을 준다면**, 수학 쪽 방향이 고유벡터 |
+| **고유값** | 그 방향이 얼마나 중요한지 나타내는 수 | 성적에서 수학 점수가 정말 중요하다면, 그 영향력을 숫자로 나타낸 것이 고유값 |
 
 ---
 
@@ -107,14 +79,16 @@ df = pd.read_csv('/content/drive/MyDrive/파일경로/파일명.csv')
 
 ---
 
-## ✅ 피처 스케일링
-- 값의 크기와 단위를 비슷하게 맞추는 작업
+## ✅ 피처 스케일링 방법
 
-### 방법
-- **표준화** : 평균 0, 표준편차 1
-- **최소-최대 스케일링** : 0~1 사이 값으로 변환
-- **로버스트 스케일링** : 이상치에 강함
-- **로그 변환** : 큰 값을 작게, 치우침 완화
+| 방법 | 설명 |
+|------|------|
+| **표준화 (Standardization)** | 평균 0, 표준편차 1로 맞춤 |
+| **최소-최대 스케일링 (Min-Max Scaling)** | 최소값 0, 최대값 1로 변환 |
+| **로버스트 스케일링 (Robust Scaling)** | 중앙값 기준, IQR(사분위범위)로 스케일링해서 이상치 영향 감소 |
+| **로그 변환 (Log Transform)** | 로그를 취해 큰 값을 줄이고, 데이터 분포를 정규분포처럼 만듦 |
+
+> ✔ **주의** : 로그 변환은 데이터에 0이나 음수가 있으면 안되니까 `np.log1p()` 같이 +1을 더해주는 방식을 많이 써!
 
 ---
 
@@ -124,17 +98,28 @@ df = pd.read_csv('/content/drive/MyDrive/파일경로/파일명.csv')
 
 ---
 
+## ✅ 차원 축소 (Dimensionality Reduction)
+
+**차원 축소**는 데이터의 복잡한 특징(피처)을 **더 적은 수의 특징으로 줄이되, 중요한 정보는 최대한 보존**하는 기법이에요.
+
+| 방법 | 특징 | 사용 목적 | 예시 |
+|------|------|-----------|---------------------------|
+| **PCA** (주성분 분석) | 데이터의 **분산이 큰 방향**을 기준으로 축소 | 시각화, 노이즈 제거, 과적합 방지 | 여러 과목 점수를 '공부 잘하는 정도' 하나로 요약하기 |
+| **LDA** (선형 판별 분석) | **클래스 간 차이를 극대화**하는 방향으로 축소 | 분류 성능 향상, 시각화 | 고양이/강아지 구분에 좋은 기준으로 데이터 줄이기 |
+
+---
+
 ## ✅ 전체 정리
 
-| 용어             | 의미 | 중학생도 이해할 수 있는 예시 |
+| 용어             | 의미 | 예시 |
 |------------------|------|---------------------------|
 | 피처             | 예측에 사용하는 정보 | 키, 몸무게 같은 측정값 |
 | 타겟 / 레이블     | 예측하려는 결과 | 시험 점수, 비만 여부 |
 | 클래스           | 결과의 여러 종류 | 고양이, 강아지, 토끼 |
 | 공분산           | 두 값이 함께 변하는 정도 | 키와 몸무게가 같이 클 때 양수 |
 | 공분산 행렬       | 여러 변수의 공분산 표 | 여러 과목 점수 간 관계 정리 |
-| 고유벡터         | 데이터를 설명하는 방향 | 공부 잘하는 정도 방향 |
-| 고유값           | 그 방향의 중요도 | 공부 잘하는 정도가 중요한 정도 |
+| 고유벡터         | 데이터를 설명하는 방향 | 여러 과목 점수 중 '수학 점수의 비중이 크다'면, 수학이 가장 중요한 방향 |
+| 고유값           | 그 방향의 중요도 | 	수학 점수가 성적에 가장 큰 영향을 준다면, 그 영향력의 크기 |
 | **PCA**              | 중요한 정보 중심으로 차원 줄임 | 여러 과목 점수를 '공부력' 하나로 요약 |
 | **LDA**              | 클래스 구분 잘 되게 차원 축소 | 고양이, 강아지 구분 잘하는 기준 만들기 |
 | 상관관계         | 두 값이 함께 변하는 정도 | 공부시간과 점수의 관계 |
