mathjax + edit posts

--- a/_posts/2025-07-21-2025-07-21_학습 노트.md
+++ b/_posts/2025-07-21-2025-07-21_학습 노트.md
@@ -6,9 +6,9 @@ date: 2025-07-21
 
 # 📚 GPT 대화형 학습 및 활용법
 
-### 1. 기본 개념
+## 1. 기본 개념
 
-#### 인컨텍스트 러닝 (In-Context Learning)
+### 인컨텍스트 러닝 (In-Context Learning)
 - **정의**: 맥락(컨텍스트) 안에서 학습하는 방법
 - **예시**: 
   ```
@@ -19,44 +19,44 @@ date: 2025-07-21
   ```
 - 패턴을 통해 답을 유추할 수 있게 됨
 
-#### ChatGPT 세션 관리
+### ChatGPT 세션 관리
 - **대화 전송 방식**: 현재 대화만 보내는 것처럼 보이지만, 실제로는 한 세션 내 모든 이전 대화가 함께 전송됨
-- **성능 저하 원인**: 
+- **대화가 길어지면**: 
   - 대화가 길어질수록 GPT 응답 속도 저하
-  - 토큰 한도에 가까워지면 오래된 대화 내용이 잘림
+  - 토큰 한도에 가까워지면 오래된 대화 내용이 잘림 (대화내용 까먹음)
 - **활용 팁**: 좋은 대화가 있었을 때 "이때까지 대화가 좋았다"고 말하며 시스템 프롬프트 작성 요청 가능
 
-### 2. 대화 관리 기법
+## 2. 대화 관리 기법
 
-#### 메시지 편집 및 피드백
+### 메시지 편집 및 피드백
 - **메시지 편집**: 실수한 대화가 있을 때 메시지 편집으로 분기 생성 가능
 - **효과적인 피드백**: 
   - 칭찬 자주 해주기 (기분 맞추기가 아닌 의도 전달)
   - 원하지 않는 답변일 때 구체적으로 어떤 부분이 잘못 이해되었는지 설명
 
-### 3. 프롬프팅 기법
+## 3. 프롬프팅 기법
 
-#### 기본 프롬프팅
+### 기본 프롬프팅
 - **롤 프롬프팅**: "너는 ~이다" 보다는 "~처럼 행동해라"로 지시하기
 - **퓨샷 프롬프팅**: 소수의 예제를 통해 답변 패턴 학습시키기
 - **네거티브 프롬프팅**: "~하지 마라" 대신 "~해라"로 긍정적 지시
 
-#### 고급 프롬프팅 기법
+### 고급 프롬프팅 기법
 
-##### Chain-of-Thought (CoT) 프롬프팅
+#### Chain-of-Thought (CoT) 프롬프팅
 - **방법**: 프롬프트에 "Let's think step by step" 추가
 - **효과**: 복잡한 추론 문제에서 정확도 크게 향상
 
-##### Self-Consistency 기법
+#### Self-Consistency 기법
 - **방법**: 같은 질문을 여러 번 반복해서 물어보고 가장 일관되게 나오는 답변 선택
 - **효과**: 수학 문제 해결 정확도가 크게 향상됨
 
-##### 메타인지 프롬프팅
-- **방법**: "확실하지 않으면 '모르겠다'고 말해줘" 또는 "이 질문에 대한 너의 확신도를 1~5로 평가해줘"
+#### 메타인지 프롬프팅
+- **방법**: "확실하지 않으면 '모르겠다'고 말해줘" 또는 "답에 대한 너의 확신도를 1~5로 평가해줘"
 - **효과**: 할루시네이션(잘못된 정보 생성) 감소
 
-### 4. 실용적인 최적화 팁
+## 4. 실용적인 최적화 팁
 
-#### 컨텍스트 윈도우 최적화
+### 컨텍스트 윈도우 최적화
 - **중요 정보 배치**: 프롬프트 시작과 끝 부분에 핵심 정보 배치
 - **이유**: "Lost in the Middle" 현상 - 중간 부분 정보는 상대적으로 덜 활용됨
