--- a/_posts/2025-07-22-2025-07-22_학습 노트.md
+++ b/_posts/2025-07-22-2025-07-22_학습 노트.md
@@ -4,30 +4,32 @@ categories: [학습노트]
 date: 2025-07-22
 ---
 
-# 📚 데이터 분석 & 머신러닝
+# 📚 데이터 & 피처 엔지니어링
 
 ---
 
 ## 1. 데이터 종류
 
-| Category(구분)         | Easily(쉽게 말해) | Example(예시)   |
-| -------------------- | ----------------------- | ------------- |
-| Structured(정형)       | 표처럼 칸이 딱딱 맞는 것          | 엑셀, DB 테이블    |
-| Semi-structured(반정형) | 구조는 있지만 표는 아님           | JSON, XML, 로그 |
-| Unstructured(비정형)    | 아무 구조 없는 것              | 이미지, 텍스트, 음성  |
+| **구분**                   | **설명**          | **예시**            |
+| -------------------- | -------------- | ------------- |
+| **정형(Structured)**       | 표처럼 칸이 딱딱 맞는 것 | 엑셀, DB 테이블    |
+| **반정형(Semi-structured)** | 구조는 있지만 표는 아님  | JSON, XML, 로그 |
+| **비정형(Unstructured)**    | 아무 구조 없는 것     | 이미지, 텍스트, 음성  |
+
 
 ---
 
 ## 2. 수치형 vs 범주형
 
-| Type(구분)          | Easily(쉽게 말해) | Example(예시) |
-| ----------------- | ----------------------- | ----------- |
-| Numeric(수치형)      | 숫자로 된 데이터               | 키, 몸무게, 나이  |
-| └ Discrete(이산형)   | 셀 수 있는 숫자               | 사람 수, 주사위   |
-| └ Continuous(연속형) | 계속 이어지는 숫자              | 키, 온도       |
-| Categorical(범주형)  | 이름이나 그룹                 | 성별, 혈액형     |
-| └ Ordinal(순서형)    | 순서가 있는 그룹               | 학점, 만족도     |
-| └ Nominal(명목형)    | 순서 없는 그룹                | 혈액형, 지역     |
+| **구분**    | **설명**      | **예시**         |
+| ----- | ---------- | ---------- |
+| **수치형**   | 숫자로 된 데이터  | 키, 몸무게, 나이 |
+| **└ 이산형** | 셀 수 있는 숫자  | 사람 수, 주사위  |
+| **└ 연속형** | 계속 이어지는 숫자 | 키, 온도      |
+| **범주형**   | 이름이나 그룹    | 성별, 혈액형    |
+| **└ 순서형** | 순서가 있는 그룹  | 학점, 만족도    |
+| **└ 명목형** | 순서 없는 그룹   | 혈액형, 지역    |
+
 
 ---
 
@@ -78,7 +80,7 @@ df = pd.read_csv('/content/drive/MyDrive/파일경로/파일명.csv')
 
 **변수 단위를 맞추는 작업**
 
-| Method (방법)                  | Easily (쉽게 말해)       | When to Use (언제 사용?) |
+| **방법**                  | **설명**       | **적합 상황** |
 | ---------------------------- | ------------------------------ | -------------------- |
 | **Standardization (표준화)**        | 평균을 0, 표준편차를 1로 변환             | 데이터가 정규분포일 때         |
 | **Min-Max Scaling (최소-최대 스케일링)** | 최솟값을 0, 최댓값을 1로 변환해 [0,1]로 조정 | 값의 범위를 맞추고 싶을 때      |
@@ -91,7 +93,7 @@ df = pd.read_csv('/content/drive/MyDrive/파일경로/파일명.csv')
 
 **범주형 데이터를 수치로 바꾸는 것**
 
-| Method (방법)         | When to Use (언제 사용?)           | 	Example (예시)                |
+| **방법**         | **적합 상황**           | 	**예시**                |
 |--------------|---------------------|---------------------|
 | **Label Encoding (레이블 인코딩)**| 순서 있는 그룹      | 학점: A→0, B→1, ...|
 | **One-Hot Encoding (원-핫 인코딩)** | 순서 없는 그룹      | 색깔: 빨강→[1,0,0] 파랑→[0,1,0] |
@@ -107,22 +109,23 @@ df = pd.read_csv('/content/drive/MyDrive/파일경로/파일명.csv')
 
 #### 결측치 패턴
 
-| Pattern (패턴) | Meaning (의미)    | Difficulty (처리 난이도) |
-| ------------ | --------------- | ------------------- |
-| **MCAR**     | 완전 무작위 결측       | 쉬움 👍               |
-| **MAR**      | 다른 변수에 따라 결측 발생 | 중간 🟡               |
-| **MNAR**     | 자기 변수 자체가 결측 원인 | 어려움 ⚠️              |
+| **패턴**   | **의미**              | **처리 난이도** |
+| ---- | --------------- | ------ |
+| MCAR | 완전 무작위 결측       | 쉬움     |
+| MAR  | 다른 변수에 따라 결측 발생 | 중간     |
+| MNAR | 자기 변수 자체가 결측 원인 | 어려움     |
+
 
 #### 결측치 처리 전략
 
-| Strategy (전략)                       | Feature (특징)                    | Situation (적합 상황) |
-| ----------------------------------- | ------------------------------- | ----------------- |
-| **Drop (삭제)**                       | 결측값 있는 행/열 제거                   | 결측 적을 때           |
-| **Mean/Median Imputation (평균/중앙값)** | 수치형 채우기 (단순 대체)                 | 빠르게 처리할 때         |
-| **Mode Imputation (최빈값)**           | 범주형 채우기                         | 카테고리일 때           |
-| **Interpolation (보간)**              | 앞뒤 값으로 채우기 (시계열)                | 시간 데이터에 좋음        |
-| **Predictive Imputation (예측 대체)**   | 모델로 결측 예측하여 채움                  | 정확도 중요할 때         |
-| **Special Value/Masking (특수값/마스킹)** | `unknown`, `is_null` 등으로 명시적 처리 | 결측 자체도 정보일 때      |
+| **전략**                             | **특징**              | **적합 상황**          |
+| ------------------------------ | --------------- | -------------- |
+| **Drop (삭제)**                             | 행/열 제거          | 결측 적을 때        |
+| **Mean/Median Imputation (평균/중앙값)**                      | 수치형 대체 (단순)     | 빠르게 처리할 때      |
+| **Mode Imputation (최빈값)**                         | 범주형 대체          | 카테고리형일 때       |
+| **Interpolation (보간)**                             | 앞뒤 값으로 채움 (시계열) | 시간 데이터         |
+| **Predictive Imputation (예측 대체)**                          | 모델로 예측해서 채움     | 정확도 중요할 때      |
+| **Special Value/Masking (특수값/마스킹)** | 결측 자체도 정보로 사용   | 결측 자체도 의미 있을 때 |
 
 ---
 
@@ -130,13 +133,14 @@ df = pd.read_csv('/content/drive/MyDrive/파일경로/파일명.csv')
 
 **도메인 지식을 활용해서 직접 새로운 변수를 만듦**
 
-| Type (종류)                        | Idea (핵심 아이디어)       | Example (간단 예시) |
-| -------------------------------- | -------------------- | --------------- |
-| **Numeric Combination (수치형 조합)**     | 수치형 변수들로 새 변수 만들기    | `가격 * 수량 = 총액`  |
-| **Categorical Combination (범주형 조합)** | 범주형 변수 결합해서 새 그룹 만들기 | `성별+지역`         |
-| **Time Derivation (시간 파생)**          | 날짜/시간에서 의미 있는 값 추출   | `요일`, `주말 여부`   |
-| **Binary Variable (이진 변수)**          | 기준으로 0 또는 1 나누기      | `연봉 > 5000 → 1` |
-| **Group Statistics (그룹 통계)**         | 그룹별 평균, 최대값 등 통계 활용  | `지역별 평균 소득`     |
+| **종류**       | **설명**          | **예시**            |
+| -------- | ------------- | ------------- |
+| **Numeric Combination (수치형 조합)**   | 수치 간 곱/합 등    | 가격 × 수량 = 총액  |
+| **Categorical Combination (범주형 조합)**   | 범주 결합         | 성별+지역         |
+| **Time Derivation (시간 파생)** | 날짜/시간 활용      | 요일, 주말 여부     |
+| **Binary Variable (이진 변수)**    | 조건으로 0/1 구분   | 연봉 > 5000 → 1 |
+| **Group Statistics (그룹 통계)**    | 그룹별 평균, 최대값 등 | 지역별 평균 소득     |
+
 
 ---
 
@@ -144,11 +148,10 @@ df = pd.read_csv('/content/drive/MyDrive/파일경로/파일명.csv')
 
 **기존 피처들을 조합해서 새로운 변수로 바꾸는 것**
 
-| Method (방법)                             | Easily (쉽게 말해) | Example (예시)       |
-| --------------------------------------- | -------------------------- | ------------------ |
-| **PCA: Principal Component Analysis (주성분 분석)**   | 정보의 손실을 최소화하며 차원 축소하기      | 100개의 점수를 2개로 요약하기 |
-| **LDA: Linear Discriminant Analysis (선형 판별 분석)** | 그룹 간 구분이 잘 되도록 차원 축소하기     | 고양이와 강아지를 잘 구분하기   |
-
+| **방법**  | **설명**          | **예시**               |
+| --- | -------------- | ---------------- |
+| **PCA: Principal Component Analysis (주성분 분석)** | 손실 최소화 차원 축소   | 점수 100개 → 2개로 요약 |
+| **LDA: Linear Discriminant Analysis (선형 판별 분석)** | 그룹 구분에 초점 둔 축소 | 고양이/강아지 구분       |
 
 ---
 
@@ -168,13 +171,51 @@ df = pd.read_csv('/content/drive/MyDrive/파일경로/파일명.csv')
 
 #### 임베디드 기법
 
-| Method(방법)            | Easily (쉽게 말해)     | Pros/Cons(장점/단점) | Example(예시) |
-| --------------------- | --------------------------- | ---------------- | ----------- |
-| Lasso(라쏘)             | L1 정규화로 불필요한 피처 자동으로 0으로 만듦 | 해석 쉬움, 일부만 선택    | 집값 예측       |
-| Ridge(릿지)             | L2 정규화로 모든 피처 계수 작게 만듦      | 과적합 방지, 선택 없음    | 다중공선성 해결    |
-| Elastic Net(일래스틱넷)    | L1 + L2 섞음                  | 조정 복잡            | 유전자 데이터     |
-| Random Forest(랜덤포레스트) | 여러 트리로 중요도 평균냄              | 비선형도 잘 잡음        | 복잡한 분류/회귀   |
+| **방법**            | **설명**               | **장단점**       | **예시**        |
+| ------------- | ------------------- | --------- | --------- |
+| **Lasso (L1)**    | 중요도 낮은 피처 계수 0으로 설정 | 해석 쉬움     | 집값 예측     |
+| **Ridge (L2)**    | 모든 피처 계수 작게 조정      | 다중공선성 완화  | 회귀모델      |
+| **Elastic Net**  | L1 + L2 결합          | 조정 복잡     | 유전자 예측    |
+| **Random Forest** | 트리 기반 중요도 평균        | 비선형 대응 가능 | 복잡한 분류/회귀 |
 
 ##### 정규화 수식
 - **L1**: 계수 절댓값 합 제한
 - **L2**: 계수 제곱합 제한
+
+---
+
+## 7. 샘플링 기법 & 데이터 처리 방식
+
+### 언더샘플링 기법
+
+| **방법**                    | **설명**                             |
+|-----------------------|--------------------------------|
+| **Random**               | 많은 클래스에서 샘플을 무작위로 일부 삭제       |
+| **Tomek Links**          | 가까운 다른 클래스 샘플 쌍을 찾아 제거          |
+| **OSS (One-Sided Selection)** | 겹치는 애매한 샘플만 남기고 나머지는 삭제      |
+| **CNN (Condensed NN)**   | 분류에 꼭 필요한 핵심 샘플만 남기고 압축       |
+
+---
+
+### 오버샘플링 기법
+
+| **방법**               | **설명**                           |
+|--------------------|------------------------------|
+| **Random**             | 소수 클래스 샘플을 단순 복제                      |
+| **SMOTE**              | 비슷한 샘플 사이에 새로운 샘플을 만들어 추가           |
+| **ADASYN**             | 구분이 어려운 샘플 주변에 새 샘플을 더 많이 생성         |
+| **Borderline-SMOTE**   | 다른 클래스와 헷갈릴 만한 샘플 주변에 새 샘플 생성        |
+| **KMeans-SMOTE**       | 비슷한 샘플끼리 묶은 그룹 중심에서 새 샘플 생성          |
+
+---
+
+### 데이터 처리 방식: ETL vs ELT
+
+| **방법** | **정의** | **적합 환경** |
+|--------|------------------------|------------------------------------------------------|---------------|
+| **ETL (Extract, Transform, Load)** | 추출 → 외부에서 변환 → 저장소에 넣음 | **자체 서버에 구축된 데이터베이스 시스템** |
+| **ELT (Extract, Load, Transform)** | 추출 → 저장소에 넣고 → 저장소 안에서 처리 | **클라우드 기반 저장소 (예: BigQuery, Redshift)** |
+
+- **Extract**: 원본 데이터를 추출해서 가져옴 
+- **Transform**: 데이터 정제, 형변환, 집계 등 가공 수행  
+- **Load**: 파일 또는 테이블로 저장
