--- a/_posts/2025-07-23-2025-07-23_학습 노트.md
+++ b/_posts/2025-07-23-2025-07-23_학습 노트.md
@@ -2,279 +2,263 @@
 title: "2025-07-23 학습노트"
 categories: [학습노트]
 date: 2025-07-23
+math: true
 ---
 
-# 📚 통계학
-
----
-
-## 1. 기본 개념
-
-| 개념 (Concept) | 쉽게 설명하기 | 예시 |
-|----------------------|---------------------------------------|----------------------------------|
-| 표본공간 (Sample Space) | 가능한 모든 결과를 모아 놓은 것 | 동전을 던질 때 결과는 {앞, 뒤} |
-| 사건 (Event) | 표본공간에서 일어날 수 있는 결과의 일부 | 동전이 앞면 나오는 사건 → {앞} |
-| 확률 (Probability) | 어떤 일이 일어날 가능성 (0에서 1 사이 숫자) | 앞면이 나올 확률 = 0.5 |
-| 배반사건 (Mutually Exclusive Events) | 동시에 일어날 수 없는 사건들 | 주사위에서 짝수가 나오면서 홀수가 나올 수 없음 |
-| 독립사건 (Independent Events) | 한 사건이 다른 사건에 영향을 주지 않음 | 첫 번째 동전이 앞면이어도 두 번째 동전 확률은 여전히 0.5 |
-| 조건부확률 (Conditional Probability) | 어떤 일이 이미 일어났을 때, 다른 일이 일어날 확률 | 비가 온 상태일 때 우산을 챙길 확률 |
-| 베이즈 정리 (Bayes' Theorem) | 조건부확률을 쉽게 계산할 수 있는 공식 | 병에 걸렸을 확률 계산 등에 사용 |
-| 확률변수 (Random Variable) | 결과를 숫자로 나타낸 것 | 주사위 눈 = 1, 2, 3, 4, 5, 6 |
-| 확률질량함수 (Probability Mass Function, PMF) | 이산형 확률변수가 특정 값을 가질 확률 | 주사위가 3 나올 확률 = 1/6 |
-| 확률밀도함수 (Probability Density Function, PDF) | 연속형 확률변수의 확률을 나타내는 함수 | 키가 170~171cm 사이에 있을 확률 |
-| 누적분포함수 (Cumulative Distribution Function, CDF) | 어떤 값 이하가 나올 확률을 모두 더한 함수 | 키가 170cm 이하일 확률 |
-| 기댓값 (Expected Value, Mean) | 확률변수의 평균값, 기대할 수 있는 평균 | 주사위 눈 평균은 3.5 |
-| 분산 (Variance) | 값들이 평균에서 얼마나 퍼져 있는지 나타내는 숫자 | 주사위 눈의 분산 약 2.92 |
-| 표준편차 (Standard Deviation) | 분산의 제곱근, 평균에서 얼마나 퍼져있는지 | 키의 표준편차 6cm |
-| 대수의 법칙 (Law of Large Numbers) | 실험을 아주 많이 하면 평균값이 진짜 평균에 가까워짐 | 동전을 여러 번 던지면 앞면 확률 0.5에 가까워짐 |
-| 중심극한정리 (Central Limit Theorem) | 여러 표본 평균은 표본 수가 많아질수록 정규분포(종 모양)를 이룸 | 시험 점수 평균을 여러 번 구하면 정규분포 모양 |
+# 📚 확률과 통계 기초
 
 ---
 
-## 2. 꼭 알아야 할 공식
+## 1. 자주 쓰이는 기호 정리
 
-- **조건부확률 (Conditional Probability)**  
-  어떤 일이 B일 때, A가 일어날 확률은  
-  P(A|B) = P(A와 B가 동시에 일어날 확률) ÷ P(B)
-
-- **베이즈 정리 (Bayes' Theorem)**  
-  B가 일어난 상황에서 A가 일어날 확률은  
-  P(A|B) = P(B|A) × P(A) ÷ P(B)
-
-- **기댓값 (Expected Value)**  
-  모든 가능한 값에 그 값이 나올 확률을 곱한 뒤 다 더함  
-  E[X] = 값₁ × 확률₁ + 값₂ × 확률₂ + ...
-
-- **분산 (Variance)**  
-  값들의 제곱 평균에서 기댓값 제곱을 뺀 값  
-  Var(X) = E[X²] - (E[X])²
-
-- **표준편차 (Standard Deviation)**  
-  분산의 제곱근  
-  σ = √Var(X)
+| **기호**       | **의미**       | **정의 또는 공식**                                      | **예시**                          |
+|----------------|----------------|---------------------------------------------------------|-----------------------------------|
+| $P(A)$         | 사건 확률      | $\dfrac{\text{성공 수}}{\text{전체 수}}$                 | $P(\text{앞})=\dfrac{1}{2}$       |
+| $\mu$          | 모평균         | $\dfrac{1}{N}\sum x_i$                                  | $(60+70+80)/3=70$                 |
+| $\bar{x}$      | 표본평균       | $\dfrac{1}{n}\sum x_i$                                  | $(68+72)/2=70$                    |
+| $\sigma^2$     | 모분산         | $\dfrac{1}{N}\sum(x_i-\mu)^2$                            | $x=\{2,4,6\},\ \mu=4 \Rightarrow \dfrac{(2-4)^2+(4-4)^2+(6-4)^2}{3}=2.67$ |
+| $s^2$          | 표본분산       | $\dfrac{1}{n-1}\sum(x_i-\bar{x})^2$                     | $x=\{80,120\},\ \bar{x}=100 \Rightarrow \dfrac{(80-100)^2+(120-100)^2}{1}=800$ |
+| $\sigma$       | 모표준편차     | $\sqrt{\sigma^2}$                                      | $\sqrt{2.67}\approx1.63$          |
+| $s$            | 표본표준편차   | $\sqrt{s^2}$                                           | $\sqrt{800}=28.28$                |
+| $n$            | 표본 크기      | 표본 개수                                              |                                   |
+| $\binom{n}{k}$ | 조합           | $\dfrac{n!}{k!(n-k)!}$                                 | $5명 중 2명을 뽑는 경우: \binom{5}{2}=10$ |
+| $\cap$         | 교집합         | $A\cap B$                                              | 짝수∩3의배수 = $\{6\}$           |
+| $\cup$         | 합집합         | $A\cup B$                                              | 짝수∪3의배수 = $\{2,3,4,6\}$      |
+| $\sim$         | 분포 따름      | $X\sim N(\mu,\sigma^2)$                                | 키가 평균 170, 분산 25인 사람: $X\sim N(170,25)$ |
+| $E(X)$ | 기대값 | $\sum x_iP(x_i)$ | 앞면이면 1000원, 뒷면이면 0원인 동전 게임 → $E(X)=1000\cdot 0.5 + 0\cdot 0.5 = 500$ |
+| $P(B \mid A)$  | 조건부확률     | $\dfrac{P(A\cap B)}{P(A)}\ (P(A)>0)$                    | 아침 먹은 사람 중 우유 마신 비율이 60%이면 $P(\text{우유} \mid \text{아침})=0.6$ |
+| $H_0/H_1$      | 귀무/대립가설  | $H_0$: 차이 없음, $H_1$: 차이 있음                      | $H_0$: $\mu_1=\mu_2$<br>$H_1$: $\mu_1\ne\mu_2$ |
 
 ---
 
-## 3. 자주 쓰는 기호
+## 2. 확률의 기초 개념
 
-| 기호 | 이름 (발음) | 뜻 | 예시 |
-|----------|---------------------|------------------------------|------------------------------|
-| μ | 뮤 (mu) | 모평균 (Population Mean) | 전체 학생 키 평균 170cm |
-| σ | 시그마 (sigma) | 모표준편차 (Population Standard Deviation) | 키 표준편차 6cm |
-| x̄ | 엑스바 (x-bar) | 표본평균 (Sample Mean) | 30명 키 평균 172cm |
-| s | 에스 (s) | 표본표준편차 (Sample Standard Deviation) | 30명 키 표준편차 5.8cm |
-| n | 엔 (n) | 표본크기 (Sample Size) | 30명 |
-| N | 대문자 엔 (capital N) | 모집단크기 (Population Size) | 500명 |
-| p | 피 (p) | 모비율 (Population Proportion) | 여성 비율 45% |
-| p̂ | 피 햇 (p-hat) | 표본비율 (Sample Proportion) | 여성 비율 50% |
-| Z | 지 (Z) | 표준화점수 (Z-score, Standard Score) | Z=1.5는 평균보다 1.5배 표준편차만큼 높음 |
-| α | 알파 (alpha) | 유의수준 (Significance Level) | 5% 오차 허용 (0.05) |
-| Σ | 시그마 대문자 (capital Sigma) | 합계 (Summation) | Σx = 10 + 20 + 30 = 60 |
-| t | 티 (t) | t통계량 (t-statistic) | 표본이 작을 때 평균 비교에 사용 |
+### 확률 (Probability)
+
+**어떤 사건이 일어날 가능성을 0에서 1 사이의 수로 표현한 것**
 
 ---
 
-## 4. 핵심 개념 설명
+### 표본공간 (Sample Space)
 
-### 4-1. 신뢰구간 (Confidence Interval)
-- 모평균이 들어 있을 것 같은 범위
-- 95% 신뢰구간 예: 168cm에서 172cm 사이
-- 여러 번 반복 측정하면 95%는 이 범위 안에 평균이 있음
+실험에서 나올 수 있는 **모든 가능한 결과들의 집합**
 
-### 4-2. 표본분포 (Sampling Distribution)
-- 여러 번 표본을 뽑아 평균을 구할 때 그 평균들의 분포
-- 표본이 많아질수록 정규분포(종 모양)와 비슷해짐
-
-### 4-3. 가설검정 (Hypothesis Testing)
-- 어떤 주장(가설)이 맞는지 통계로 판단
-- 귀무가설 (Null Hypothesis, H₀): "효과 없다" 또는 "차이 없다"
-- 대립가설 (Alternative Hypothesis, H₁): "효과 있다" 또는 "차이 있다"
-- p값이 작으면 귀무가설 기각하고 대립가설 채택
-
-### 4-4. 도수분포표 (Frequency Distribution Table)
-
-| 점수구간 | 도수 (Frequency) | 누적도수 (Cumulative Frequency) |
-|---------|-----|---------|
-| 0–10 | 2 | 2 |
-| 11–20 | 5 | 7 |
-| 21–30 | 8 | 15 |
-
-- 도수: 해당 구간에 몇 개 데이터가 있는지
-- 누적도수: 해당 구간까지 모두 몇 개 데이터 있는지
-
-### 4-5. 경험규칙 (Empirical Rule, 68-95-99.7 Rule)
-- 정규분포에서 데이터가 평균 기준으로 어떻게 분포하는지 알려줌
-- ±1 표준편차 안에 약 68%
-- ±2 표준편차 안에 약 95%
-- ±3 표준편차 안에 약 99.7%
-
-### 4-6. 표준화 (Standardization, Z-transformation)
-- 점수를 평균 0, 표준편차 1인 값으로 바꾸는 것
-- 공식: Z = (원점수 - 평균) ÷ 표준편차
-- 예: 점수 85, 평균 70, 표준편차 10 → Z = (85 - 70) ÷ 10 = 1.5
-- 해석: 이 점수는 평균보다 1.5배 표준편차만큼 높음
+* 예: 동전을 던질 때 → {앞, 뒤}
 
 ---
 
-## 5. 순열과 조합 (Permutation & Combination)
+### 복원과 비복원 (With & Without Replacement)
 
-### 5-1. 순열 (Permutation)
-- 여러 개 중 순서를 고려해서 몇 개를 고르는 방법
-- 공식: P(n, r) = n! ÷ (n - r)!
-- 예: 5명 중 1등, 2등, 3등 뽑기
-  P(5, 3) = 5! ÷ 2! = 120 ÷ 2 = 60가지
-
-### 5-2. 조합 (Combination)
-- 여러 개 중 순서 상관없이 몇 개를 고르는 방법
-- 공식: C(n, r) = n! ÷ [r! × (n - r)!]
-- 예: 친구 5명 중 3명 고르기
-  C(5, 3) = 5! ÷ (3! × 2!) = 120 ÷ (6 × 2) = 10가지
-
-### 5-3. 팩토리얼 (Factorial)
-- n! = n × (n-1) × (n-2) × ... × 2 × 1
-- 0! = 1 (특별한 약속)
-- 예: 4! = 4 × 3 × 2 × 1 = 24
+| **용어**     | **설명**                                         | **예시**                          |
+| ---------- | ---------------------------------------------- | ------------------------------- |
+| **복원 추출**  | 한 번 뽑은 뒤 **다시 넣고** 다음 걸 뽑는 방식. 확률이 **변하지 않음**. | 카드 뽑고 다시 넣은 뒤 또 뽑기 → 독립사건       |
+| **비복원 추출** | 한 번 뽑은 뒤 **다시 넣지 않고** 다음 걸 뽑는 방식. 확률이 **달라짐**. | 카드 한 장 뽑고, 다시 넣지 않고 또 뽑기 → 종속사건 |
 
 ---
 
-## 6. 가장 중요한 확률분포들 (Probability Distributions)
+### 사건 (Event)
 
-### 6-1. 정규분포 (Normal Distribution)
-- 자연에서 가장 많이 나타나는 종 모양 분포
-- 평균 μ, 표준편차 σ로 완전히 결정됨
-- 예: 키, 몸무게, 시험점수, IQ 등
-- 표준정규분포 (Standard Normal Distribution): 평균 0, 표준편차 1인 특별한 정규분포
-- 기호: X ~ N(μ, σ²)
+표본공간의 부분집합, 즉 **우리가 관심 있는 결과들의 집합**
 
-### 6-2. 이항분포 (Binomial Distribution)
-- 성공/실패가 정해진 실험을 n번 반복할 때 성공 횟수의 분포
-- 예: 동전 10번 던져서 앞면 나오는 횟수
-- 모수 (Parameters): n(시행횟수), p(성공확률)
-- 기호: X ~ B(n, p)
-- 평균: np, 분산: np(1-p)
-
-### 6-3. t분포 (t-Distribution, Student's t-Distribution)
-- 표본이 작을 때(보통 n < 30) 사용하는 분포
-- 정규분포와 비슷하지만 꼬리가 더 두꺼움
-- 표본 크기가 커질수록 정규분포에 가까워짐
-- 평균 비교, 신뢰구간 구할 때 자주 사용
-
-### 6-4. 카이제곱분포 (Chi-square Distribution)
-- 분산 검정, 독립성 검정에 사용
-- 항상 양수 값만 가짐
-- 자유도 (Degrees of Freedom)에 따라 모양이 달라짐
+| **용어**      | **설명**                 | **공식/조건**                  | **예시**                           |
+| -------------- | ---------------------- | -------------------------- | -------------------------------- |
+| **사건 (Event)** | 관심 있는 결과들의 모음          | $A \subseteq S$            | 앞면이 나올 사건 $A$                    |
+| **표본공간 (S)**   | 가능한 모든 경우의 집합          | $S$                        | $S = \{\text{앞, 뒤}\}$            |
+| **여사건 (A')**   | 사건 A가 **일어나지 않는** 경우   | $A'$ 또는 $A^c$              | $A$=짝수, $A'$=홀수                  |
+| **독립사건**       | 한 사건이 다른 사건에 영향을 주지 않음 | $P(A \cap B) = P(A)P(B)$   | 주사위 던지고, 동전 던지기                  |
+| **종속사건**       | 한 사건이 다른 사건에 영향을 줌     | $P(A \cap B) \ne P(A)P(B)$ | 카드 한 장 뽑고, **다시 넣지 않고** 또 한 장 뽑기 |
 
 ---
 
-## 7. 상관관계와 회귀분석 기초 (Correlation & Regression)
+## 3. 확률의 기본 공식
 
-### 7-1. 상관계수 (Correlation Coefficient)
-- 두 변수가 함께 변하는 정도를 나타내는 수치
-- 피어슨 상관계수 (Pearson's r): -1 ≤ r ≤ +1
-- r = +1: 완전한 양의 상관관계 (한 변수 증가하면 다른 변수도 증가)
-- r = -1: 완전한 음의 상관관계 (한 변수 증가하면 다른 변수는 감소)
-- r = 0: 상관관계 없음
+**$ P(A) = \frac{\text{A가 일어나는 경우 수}}{\text{전체 경우 수}} $**
 
-### 7-2. 상관관계 vs 인과관계 (Correlation vs Causation)
-- **상관관계**: 두 변수가 함께 변하는 관계
-- **인과관계**: 한 변수가 다른 변수의 원인이 되는 관계
-- **중요**: 상관관계가 있다고 인과관계가 있는 건 아님!
-- 예: 아이스크림 판매량과 익사 사고 → 상관관계 있지만 인과관계 없음 (더운 날씨가 진짜 원인)
-
-### 7-3. 회귀분석 기초 (Regression Analysis)
-- 한 변수로 다른 변수를 예측하는 방법
-- 단순선형회귀 (Simple Linear Regression): y = a + bx
-- a: 절편 (Intercept), b: 기울기 (Slope)
-- 예: 공부시간으로 시험점수 예측
+### 예제  
+동전 던질 때 앞면이 나올 확률  
+- 전체: 2, 앞면: 1  
+- $P(\text{앞면}) = \frac{1}{2} = 0.5$
 
 ---
 
-## 8. 가설검정 실전 가이드 (Hypothesis Testing Guide)
+## 4. 베르누이 시행과 관련 분포
 
-### 8-1. 가설검정 5단계
-1. **가설 설정**: 귀무가설(H₀)과 대립가설(H₁) 설정
-2. **유의수준 결정**: 보통 α = 0.05 (5%)
-3. **검정통계량 계산**: t값, Z값 등 계산
-4. **p값 구하기**: 검정통계량에 해당하는 확률
-5. **결론**: p값 < α이면 귀무가설 기각
+### 4.1 베르누이분포 (Bernoulli Distribution)
 
-### 8-2. 자주 하는 검정들
-- **일표본 t검정 (One-sample t-test)**: 표본 평균이 특정 값과 같은지 검정
-- **이표본 t검정 (Two-sample t-test)**: 두 그룹의 평균이 같은지 검정
-- **대응표본 t검정 (Paired t-test)**: 같은 대상의 전후 비교
-- **카이제곱 검정 (Chi-square test)**: 범주형 변수들이 독립인지 검정
+- **개념:**  
+  한 번 실험해서 두 가지 결과(성공/실패)만 나오는 경우  
+  (예: 동전 한 번 던져 앞면/뒷면)
 
-### 8-3. p값 해석하기 (p-value Interpretation)
-- p < 0.001: 매우 강한 증거 ("***")
-- p < 0.01: 강한 증거 ("**")
-- p < 0.05: 보통 증거 ("*")
-- p ≥ 0.05: 증거 부족 ("유의하지 않음, Not Significant")
+- **공식:**  
+  - $P(\text{성공}) = p$  
+  - $P(\text{실패}) = 1 - p$  
+  - 평균: $p$  
+  - 분산: $p(1-p)$
 
-### 8-4. 오류의 종류 (Types of Error)
-- **제1종 오류 (Type I Error)**: 참인 귀무가설을 기각하는 오류 (α)
-- **제2종 오류 (Type II Error)**: 거짓인 귀무가설을 채택하는 오류 (β)
-- **검정력 (Statistical Power)**: 1 - β, 실제 효과를 찾아낼 확률
+- **예시:**  
+  동전을 한 번 던져 앞면이 나올 확률이 0.5라면  
+  - $P(\text{앞면}) = 0.5$  
+  - 평균 = 0.5  
+  - 분산 = 0.25
 
 ---
 
-## 9. 실무에서 자주 쓰는 팁들
+### 4.2 이항분포 (Binomial Distribution)
 
-### 9-1. 표본 크기 결정 (Sample Size Determination)
-- 일반적으로 n ≥ 30이면 중심극한정리 적용 가능
-- 더 정확한 결과를 원하면 표본을 더 크게
-- 비용과 정확도의 균형점 찾기
+- **개념:**  
+  같은 확률 $p$로 $n$번 반복해서,
+  성공이 $k$번 나오는 경우  
+  (예: 동전 3번 던져 앞면이 2번 나올 확률)
 
-### 9-2. 이상치 처리 (Outlier Treatment)
-- 이상치 (Outlier): 다른 데이터와 크게 다른 값
-- 탐지 방법: 박스플롯, IQR 방법, Z-score 방법
-- 처리 방법: 제거, 변환, 별도 분석
-- 함부로 제거하지 말고 원인 파악 먼저
+- **공식:**  
+  - $P(X = k) = {n \choose k} p^k (1-p)^{n-k}$  
+  - 평균: $np$  
+  - 분산: $np(1-p)$
 
-### 9-3. 데이터 시각화 팁 (Data Visualization)
-- 히스토그램 (Histogram): 분포 모양 확인
-- 산점도 (Scatter Plot): 두 변수 관계 확인
-- 박스플롯 (Box Plot): 이상치와 분포 요약 확인
-- Q-Q 플롯 (Q-Q Plot): 정규성 확인
-
-### 9-4. 표본추출 방법 (Sampling Methods)
-- 단순무작위표본추출 (Simple Random Sampling)
-- 층화표본추출 (Stratified Sampling)
-- 집락표본추출 (Cluster Sampling)
-- 계통표본추출 (Systematic Sampling)
+- **예시:**  
+  동전 3번 던져 앞면이 2번 나올 확률  
+  - $n = 3, k = 2, p = 0.5$  
+  - $P(X=2) = {3 \choose 2} \times (0.5)^2 \times (0.5)^1 = 3 \times 0.25 \times 0.5 = \textbf{0.375}$
 
 ---
 
-## 10. 자주 하는 실수들
+### 4.3 기하분포 (Geometric Distribution)
 
-❌ **하지 말아야 할 것들**
-- 상관관계를 인과관계로 해석하기
-- 표본이 작은데 정규분포 가정하기
-- p값만 보고 실질적 의미 무시하기 (p-hacking)
-- 이상치를 무조건 제거하기
-- 다중비교 문제 무시하기
+- **개념:**  
+  같은 확률 $p$로 반복 실험해서,  
+  처음 성공할 때까지 걸린 시행 횟수
 
-✅ **해야 할 것들**
-- 데이터 분포 먼저 확인하기 (정규성 검정)
-- 가정 조건 체크하기 (등분산성, 독립성 등)
-- 결과의 실질적 의미 생각하기 (효과크기)
-- 여러 방법으로 검증하기 (교차검증)
-- 신뢰구간도 함께 보고하기
+- **공식:**  
+  - $P(X = k) = (1-p)^{k-1} p$  
+  - 평균: $\frac{1}{p}$  
+  - 분산: $\frac{1-p}{p^2}$
+
+- **예시:**  
+  주사위를 던져 처음 6이 4번째에 나올 확률 ($p = \frac{1}{6}$)  
+  - $P(X=4) = \left(\frac{5}{6}\right)^3 \times \frac{1}{6} \approx \textbf{0.096}$
 
 ---
 
-## 11. 용어 정리 (Glossary)
+### 4.4 푸아송분포 (Poisson Distribution)
 
-| 한국어 | 영어 | 약어 |
-|--------|------|------|
-| 모집단 | Population | - |
-| 표본 | Sample | - |
-| 모수 | Parameter | - |
-| 통계량 | Statistic | - |
-| 자유도 | Degrees of Freedom | df |
-| 유의수준 | Significance Level | α |
-| 검정력 | Statistical Power | 1-β |
-| 효과크기 | Effect Size | - |
-| 신뢰구간 | Confidence Interval | CI |
-| 표준오차 | Standard Error | SE |
+- **개념:**  
+  일정한 시간(또는 공간)에서 사건의 발생 횟수
+
+- **공식:**  
+  - $P(X = k) = \frac{\lambda^k e^{-\lambda}}{k!}$  
+  - 평균: $\lambda$  
+  - 분산: $\lambda$
+
+- **예시:**  
+  한 시간에 평균 2명이 오는 매장에서, 한 시간 동안 3명이 올 확률  
+  - $\lambda = 2, k = 3$  
+  - $P(X=3) = \frac{2^3 \times e^{-2}}{3!} \approx \textbf{0.180}$
+
+---
+
+### 4.5 다항분포 (Multinomial Distribution)
+
+- **개념:**  
+  결과가 셋 이상인 경우, $n$번 실험해서 각 결과가 몇 번씩 나올 확률
+
+- **공식:**  
+  - 확률 = $\frac{n!}{k_1! k_2! \ldots k_r!} p_1^{k_1} p_2^{k_2} \ldots p_r^{k_r}$  
+    ($k_1 + \cdots + k_r = n$, $p_1 + \cdots + p_r = 1$)
+
+- **예시:**  
+  주사위 4번 던져 1이 2번, 2가 1번, 3~6이 1번  
+  - $n = 4, k_1 = 2, k_2 = 1, k_3 = 1$  
+  - $p_1 = \frac{1}{6}, p_2 = \frac{1}{6}, p_3 = \frac{4}{6}$  
+  - 확률 = $ \frac{4!}{2! 1! 1!} \times \left(\frac{1}{6}\right)^2 \times \frac{1}{6} \times \frac{4}{6} = 12 \times \frac{1}{36} \times \frac{1}{6} \times \frac{4}{6} \approx \textbf{0.037} $
+
+---
+
+### 4.6 음이항분포 (Negative Binomial Distribution)
+
+- **개념:**  
+  성공 확률 $p$로 반복해서,  
+  $r$번째 성공까지 시행한 횟수($n$)가 될 확률
+
+- **공식:**  
+  - $P(X = n) = {n-1 \choose r-1} p^r (1-p)^{n-r}$  
+  - 평균: $\frac{r}{p}$  
+  - 분산: $\frac{r(1-p)}{p^2}$
+
+- **예시:**  
+  $p = 0.3$일 때, 2번째 성공이 5번째에 나올 확률  
+  - $P(X=5) = {4 \choose 1} \times (0.3)^2 \times (0.7)^3 \approx \textbf{0.1235}$
+
+---
+
+### 4.7 초기하분포 (Hypergeometric Distribution)
+
+- **개념:**  
+  전체 $N$개 중 $K$개가 성공일 때,
+  뽑은 걸 다시 넣지 않고(중복 없이) $n$개를 뽑아, 그 중 성공이 $k$개일 확률을 구하는 분포
+
+- **공식:**  
+  - 확률 = $ \frac{ {K \choose k} {N-K \choose n-k} }{ {N \choose n} } $  
+  - 평균: $ n \frac{K}{N} $  
+  - 분산: $ n \frac{K}{N} \frac{N-K}{N} \frac{N-n}{N-1} $
+
+- **예시:**  
+  카드 52장 중 에이스 4장, 5장 뽑아 에이스 1장 나올 확률  
+  - $N = 52, K = 4, n = 5, k = 1$  
+  - 확률 = $ \frac{ {4 \choose 1} \times {48 \choose 4} }{ {52 \choose 5} } \approx \textbf{0.299} $
+
+---
+
+| **용어**       | **설명**           | **예시 및 기호 의미**                       |
+| -------------------- | ---------------- | ------------------------------------ |
+| **모집단 (Population)** | 조사 대상 전체         | 전국 고등학생 전체                           |
+| **표본 (Sample)**      | 모집단에서 일부를 추출한 집합 | 한 고등학교의 학생 100명                      |
+| **모수 (Parameter)**   | 모집단의 수치적 특성      | $\mu$ (모평균), $\sigma^2$ (모분산)  |
+| **통계량 (Statistic)**  | 표본의 수치적 특성       | $\bar{x}$ (표본평균), $s^2$ (표본분산) |
+
+---
+
+## 5. 대표값
+
+| **용어** | **설명** | **특징** |
+|----------|------|------|
+| **평균 (Mean)** | 전체합 / 개수 | 기본 중심값 |
+| **중앙값 (Median)** | 정렬했을 때 중간값 | 이상치에 강함 |
+| **최빈값 (Mode)** | 가장 자주 나오는 값 | 데이터 유형 확인에 유용 |
+
+---
+
+## 6. 산포도
+
+| **용어** | **설명** |
+|----------|------|
+| **분산 (Variance)** | 평균에서의 거리 제곱 평균 |
+| **표준편차 (Standard Deviation)** | 분산의 제곱근 |
+
+### 예제  
+데이터 $[2, 4, 4, 4, 6, 8]$  
+- 평균: $\frac{28}{6} \approx 4.67$  
+- 분산: 약 3.56  
+- 표준편차: $\sqrt{3.56} \approx 1.89$
+
+---
+
+## 7. 표준화 (Standardization, Z-score)
+
+**$Z = \frac{X - \mu}{\sigma}$**
+
+### 예제  
+$X = 85, \mu = 70, \sigma = 10$  
+- $Z = \frac{85 - 70}{10} = 1.5$
+
+---
+
+## 8. 신뢰구간 (Confidence Interval)
+
+**공식: $\bar{x} \pm Z \times \frac{\sigma}{\sqrt{n}}$**
+
+| **용어** | **설명** |
+|----------|------|
+| **신뢰수준 (Confidence Level)** | 일반적으로 95% 또는 99% |
+| **표준오차 (Standard Error)** | $\frac{\sigma}{\sqrt{n}}$ 형태로 계산 |
 
 ---
