--- a/_posts/2025-07-22-2025-07-22_학습 노트.md
+++ b/_posts/2025-07-22-2025-07-22_학습 노트.md
@@ -19,7 +19,7 @@ date: 2025-07-22
 
 ---
 
-## 2. 수치형 vs 범주형
+## 2. 데이터 형태
 
 | **구분**    | **설명**      | **예시**         |
 | ----- | ---------- | ---------- |
@@ -30,10 +30,9 @@ date: 2025-07-22
 | **└ 순서형** | 순서가 있는 그룹  | 학점, 만족도    |
 | **└ 명목형** | 순서 없는 그룹   | 혈액형, 지역    |
 
-
 ---
 
-## 3. 통계 기본
+## 3. 용어
 
 - **공분산**: 두 값이 같이 움직이는 정도 (키 크면 몸무게도 크다)
 - **상관계수**: 두 값이 얼마나 비슷하게 움직이는지 -1~+1로 표시
@@ -56,7 +55,7 @@ df = pd.read_csv('/content/drive/MyDrive/파일경로/파일명.csv')
 
 **머신러닝이나 데이터 분석에서 모델의 성능을 향상시키기 위해 데이터를 가공하는 과정**
 
-### 용어 정리
+### 용어
 
 - **피처**: 예측에 쓰는 정보 (키, 몸무게)
 - **타겟**: 예측하고 싶은 값 (집값, 점수)
@@ -148,10 +147,10 @@ df = pd.read_csv('/content/drive/MyDrive/파일경로/파일명.csv')
 
 **기존 피처들을 조합해서 새로운 변수로 바꾸는 것**
 
-| **방법**  | **설명**          | **예시**               |
-| --- | -------------- | ---------------- |
-| **PCA: Principal Component Analysis (주성분 분석)** | 손실 최소화 차원 축소   | 점수 100개 → 2개로 요약 |
-| **LDA: Linear Discriminant Analysis (선형 판별 분석)** | 그룹 구분에 초점 둔 축소 | 고양이/강아지 구분       |
+| **방법**             | **설명**                          | **예시**                     |
+| ------------------ | ------------------------------- | -------------------------- |
+| **PCA (주성분 분석, Principal Component Analysis)**   | 데이터의 **변동성**을 가장 잘 설명하는 방향으로 축소 | 점수 100개 → 핵심 2개로 요약        |
+| **LDA (Linear Discriminant Analysis, 선형 판별 분석)** | **클래스(그룹)를 잘 구분**하는 방향으로 축소     | 고양이 vs 강아지 잘 나뉘는 축 찾기      |
 
 ---
 
