--- a/_posts/2025-07-28-ComfyUi_프롬프트작성가이드.md
+++ b/_posts/2025-07-28-ComfyUi_프롬프트작성가이드.md
@@ -24,7 +24,7 @@ categories: [AI그림, ComfyUI]
 * **AI는 너무 길면 집중력이 떨어집니다.**
   → 쉼표로 구분된 태그 15~25개 정도가 가장 이상적이에요.
   → 내부적으로는 약 **75단어**(정확히는 ‘토큰’)까지 강하게 반응하며,
-  그 이상이 되면 내용이 흐릿해질 수 있어요.ㄴ
+  그 이상이 되면 내용이 흐릿해질 수 있어요.
 
 * **프롬프트는 구체적으로 작성하세요.**
 
