--- a/_posts/2025-07-28-통계_회귀분석.md
+++ b/_posts/2025-07-28-통계_회귀분석.md
@@ -73,7 +73,7 @@ math: true
   다중 회귀에서 설명변수들 간 상관관계가 높을 경우 발생  
   학습 결과가 불안정하거나 이상하게 나올 수 있다
 
-- **조정된 결정계수 (Adjusted \( R^2 \))**  
+- **조정된 결정계수 (Adjusted $R^2$)**  
   설명변수 개수를 보정한 결정계수  
   $$
   \text{Adjusted } R^2 = 1 - \left( \frac{(1 - R^2)(n - 1)}{n - p - 1} \right)
@@ -88,7 +88,7 @@ math: true
 
 로지스틱 회귀는  
 **로짓(logit)**, 즉 성공 확률 \( p \)의 **로그 오즈**  
-\( \log\left(\frac{p}{1 - p}\right) \)를  
+$( \log\left(\frac{p}{1 - p}\right) )$를  
 예측 변수들의 선형함수로 모델링하는 기법이다.
 
 $$
@@ -119,16 +119,16 @@ $$
 
 - **모수 (parameter)**  
   모델이 학습을 통해 추정하는 값.  
-  로지스틱 회귀에서는 계수 \( \beta \)가 이에 해당한다
+  로지스틱 회귀에서는 계수 $( \beta )$가 이에 해당한다
 
 - **log-likelihood**  
-  주어진 \( \beta \)로 관측된 데이터가 나올 가능성의 로그값  
+  주어진 $( \beta )$로 관측된 데이터가 나올 가능성의 로그값  
   $$
   \log L(\beta) = \sum_{i=1}^{n} \left[ y_i \log \hat{p}_i + (1 - y_i) \log(1 - \hat{p}_i) \right]
   $$
 
 - **최대우도법 (MLE)**  
-  log-likelihood를 최대화하는 \( \beta \)를 찾는 방법  
+  log-likelihood를 최대화하는 $( \beta )$를 찾는 방법  
   경사하강법 등 최적화 기법을 사용한다
 
 - **승산비 (odds ratio)**  
