0728학습노트수정

--- a/_posts/2025-07-28-2025-07-28_학습노트.md
+++ b/_posts/2025-07-28-2025-07-28_학습노트.md
@@ -13,3 +13,27 @@ date: 2025-07-28
 4. 예시를 통해 구체화하기
 5. 주의할점(선택)
 6. 요약하기
+
+## 학습할때 요령:
+학습하다보면 개념이 잘 이해가 안될때가 있다 하지만 그건 정상이다
+
+인간은 추상적인 개념을 배울때 이해가 잘 안가기때문이다
+
+그렇다면 방법이 없는것인가? 그건 아니다. 직관성있게 바꿔버리면 된다.
+
+최고의 방법은 경험을 하는거지만 경험을 못할경우 비유 혹은 사례를 보면서 이해하면 된다
+
+> 이미 충분히 이해가 가능하다면 개념부터 바로 익혀도 무방하다.
+
+### 예시 1: 경험 가능한 경우
+
+* **비효율적인 순서:** 개념부터 배우고 → 문제 풀기
+* **효율적인 순서:** 문제를 먼저 접하고 → “왜 이렇게 풀리지?” 직관 자극 → 개념 습득
+  → 실제 상황을 먼저 겪으면 개념이 맥락 속에서 살아서 들어온다.
+
+### 예시 2: 경험 불가능한 경우
+
+* **개인정보보호법이 추상적**이라 이해가 어려운 경우
+* → **실제 위반 사례**를 본다
+* → 어떤 법 조항이 적용됐는지 분석한다
+* → **법이 왜 필요한지**, **어떤 상황에서 어떻게 작용하는지**가 명확해진다
