--- a/_posts/2025-07-30-통계_나이브베이즈.md
+++ b/_posts/2025-07-30-통계_나이브베이즈.md
@@ -119,17 +119,9 @@ $$
 
 ### 3단계: 후험 확률 비교 (Posterior = Likelihood × Prior / Evidence)
 
-위에서 구한 조건부확률과 1단계에서 구했던 각 사전확률을 **베이즈 정리에 따라 곱**해준다.
+위에서 구한 조건부확률과 사전확률을 **베이즈 정리에 따라 곱**해준다.
 
-즉, 다음과 같은 베이즈 정리를 그대로 적용한 것이다:
-
-$$
-P(\text{스팸} \mid \text{cheap, today}) = \frac{P(\text{cheap, today} \mid \text{스팸}) \cdot P(\text{스팸})}{P(\text{cheap, today})}
-$$
-
-하지만 이 문제에서는 전체 확률 $P(\text{cheap, today})$ 가 공통이므로,  
-정규화 전까지는 아래처럼 **비례값만으로 비교**할 수 있다:
-
+--- 
 $$
 \begin{align*}
 P(\text{스팸} \mid \text{cheap, today}) &\propto P(\text{cheap, today} \mid \text{스팸}) \cdot P(\text{스팸}) = 0.5 \times \frac{3}{256} = \frac{3}{512} \\
@@ -163,6 +155,11 @@ P(\text{일반} \mid \text{cheap, today}) = \frac{\frac{3}{512}}{\frac{6}{512}} 
 $$
 
 즉, 관측된 단어들로 판단했을 때, 이 이메일이 스팸일 확률은 **정확히 0.5**, 일반일 확률도 **0.5**이다.
+
+여기엔 베이즈 정리가 녹아들어있다:
+$$
+P(\text{스팸} \mid \text{cheap, today}) = \frac{P(\text{cheap, today} \mid \text{스팸}) \cdot P(\text{스팸})}{P(\text{cheap, today})}
+$$
 
 ---
 
