--- a/_posts/2025-07-28-ComfyUi_프롬프트작성가이드.md
+++ b/_posts/2025-07-28-ComfyUi_프롬프트작성가이드.md
@@ -52,7 +52,7 @@ categories: [AI그림, ComfyUI]
 
 * **강조하고 싶은 요소는 weighted prompt를 사용하세요.**
 
-  * 예: `glowing eyes:1.6`
+  * 예: `(glowing eyes:1.6)`
 
   **🔍 Weighted Prompt 강도 해석**
 
